# Aura-accessibility-scanner

./: .gitignore  README.md
backend/: .env.example  config.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  scanner_process.py  security.py  test_ai_features.py  utils.py
backend/routers/: auth.py  projects.py  scan.py
backend/services/: scanner.py  scanner_wrapper.py  suggestions.py
frontend/: api.js  auth.js  dashboard.html  dashboard.js  history.html  history.js  index.html  results.html  results.js  style.css
