[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.0",
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]==0.115.12",
    "motor==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.3.0",
    "playwright==1.44.0",
    "pydantic==2.7.1",
    "pymongo==4.6.3",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.18",
    "requests==2.31.0",
    "scikit-learn==1.4.2",
    "textstat==0.7.10",
    "torch==2.5.0",
    "transformers==4.41.1",
]
